# litecast

./: .gitignore  Cargo.toml  README.md
bundle/: Info.plist  litecast.entitlements  litecast.icns
docs/: RELEASE_NOTES_v0.1.0.md  features.md  plugins.md  security.md  v2-plan.md
scripts/: bundle.sh  make-signing-cert.sh  make-transparent-icon.py
src/: ai.rs  app_shell.rs  app_state.rs  clipboard.rs  color_pick.rs  config.rs  critters.rs  currency.rs  debug_log.rs  engine.rs  engine_setup.rs  frecency.rs  hotkeys.rs  login_item.rs  main.rs  menu_ax.rs  menu_cache.rs  model.rs  paths.rs  screenshot.rs  secrets.rs  target_pid.rs  window.rs
src/preferences/: helpers.rs  list_editor.rs  mod.rs  tabs.rs
src/providers/: ai.rs  ai_commands.rs  app_commands.rs  apps.rs  bookmarks.rs  calc.rs  calendar.rs  clipboard.rs  color.rs  commands.rs  convert.rs  converters.rs  datetime.rs  devtools.rs  dictionary.rs  easter.rs  emoji.rs  emoji_data.rs  fileactions.rs  files.rs  git.rs  media.rs  menu.rs  mod.rs  network.rs  newfile.rs  notes.rs  plugins.rs  pomodoro.rs  process.rs  progutils.rs  quicklinks.rs  scripts.rs  snippets.rs  switcher.rs  system.rs  text.rs  websearch.rs  window.rs
src/security/: mod.rs  path.rs  redact.rs  url.rs
